--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~6.6.0",
+    "simplebar-angular": "^2.3.4",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
